--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -13,10 +13,6 @@ spring.datasource.url=jdbc:postgresql://localhost:5432/postgres
 spring.datasource.username=postgres
 spring.datasource.password=root
 
-
-# ===============================
-# = Thymeleaf configurations
-# ===============================
-#spring.thymeleaf.mode=LEGACYHTML5
-#spring.thymeleaf.cache=false
+spring.servlet.multipart.max-file-size = 5MB
+spring.servlet.multipart.max-request-size = 5MB
 
